For belt: added overflow-y: hidden CSS prop to fix issue on Chrome on Windows

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,7 @@ $belt-item-height: 250px;
 #belt-vert-spacer {
     height: $belt-item-height;
     overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 #belt-vert-spacer-colorfill {
